bootstrap aplicado en todas las paginas. falta mejora en nav.

--- a/index.html
+++ b/index.html
@@ -13,26 +13,25 @@
 
     <header>
         <div id="padre"><title>CHECK Tienda online de moda</title>
-
             <a href="index.html"><img src="img/IMAGEN TIENDACHECK.png"></a>  <!-- Logo -->
             <h1 class="centrar"> Tienda Online</h1>
         
             <!-- Formulario de ingreso -->
-            <form>
-                <DIV class="user">
-                    <fieldset>
-                        <div><legend>Ingrese a su cuenta</legend>
-                            <label for="nombrereusuario">Usuario:</label>
-                            <input type="text" placeholder="Ingrese su usuario" id="nombrreusuario">
-                        </div>
-                        <div>
-                            <label for="contra" >Password:</label>
-                            <input type="password" placeholder="Ingrese su password" id="contra">
-                        </div>
-                        <input type="submit">
-                    </fieldset>        
-                </DIV>
-            </form>
+                <form>
+                    <div class=" user mb-1">
+                      <label for="exampleInputEmail1" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-1">
+                      <label for="exampleInputPassword1" class="form-label">Password</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-1 form-check">
+                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
         </div>
 
 
