--- a/html/Ropa.html
+++ b/html/Ropa.html
@@ -22,20 +22,19 @@
 
             <!-- Formulario de ingreso -->
             <form>
-                <DIV class="user">
-                    <fieldset>
-                        <legend>Ingrese a su cuenta</legend>
-                        <label for="nombrereusuario">   Usuario:   </label>
-                        <input type="text" placeholder="Ingrese su usuario" id="nombrreusuario">
-                        <div>
-                            <label for="contra" >Password:</label>
-                            <input type="password" placeholder="Ingrese su password" id="contra">
-                        </div>
-                        <div>
-                            <input type="submit">
-                        </div>
-                    </fieldset>        
-                </DIV>
+                <div class=" user mb-1">
+                  <label for="exampleInputEmail1" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-1">
+                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-1 form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
 
