mejoras en seccion ropa y accesorios

--- a/html/Accesorios.html
+++ b/html/Accesorios.html
@@ -59,116 +59,123 @@
             <div class="tituloPreguntas"> ACCESORIOS</div>
             <div><IMG SRC="../img/IMAGENACCESORIOS.jpg" alt="Tendencia 2022"></div>
         </div>
-        <div id="mainRopaDos">
-            <div class="cuadroVentaA">
-                <FIELDSET>
-                    <div class="imagenes"><img src="../img/pañuelo.JPG"></div>
-                    <h3>Pañuelo $999</h3>
-                    <span>Color</span>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/sombrero.JPG" class="card-img-top imagenRopa" alt="...">
+                <div class="card-body textocard">
+                  <h5 class="card-title">Sombrero $5500</h5>
+                  <p class="card-text"><span>Color</span>
                     <select name="" id="">
                         <option value="">Negro</option>
                         <option value="">Blanco</option>
                         <option value="">Beige</option>
                         <option value="">Rosa</option>
                     </select>
-                    <h5><input type="button"><label>Agregar al carrito</label></h5>
-                </FIELDSET>
+                    <h5><button type="button" class="btn btn-secondary">Agregar al carrito</button></h5>
+                </p>
+                </div>
+              </div>
             </div>
-            <div class="cuadroVentaB">
-                <FIELDSET>
-                    <div class="imagenes"><img src="../img/sombrero.JPG"></div>
-                    <h3>Sombrero $1500</h3>
-                    <span>Color</span>
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/pañuelo.JPG" class="card-img-top imagenRopa" alt="...">
+                <div class="card-body textocard">
+                  <h5 class="card-title">Pañuelo $3500</h5>
+                  <p class="card-text"><span>Color</span>
                     <select name="" id="">
                         <option value="">Negro</option>
                         <option value="">Blanco</option>
                         <option value="">Beige</option>
                         <option value="">Rosa</option>
                     </select>
-                    <h5><input type="button"><label>Agregar al carrito</label></h5>
-                </FIELDSET>
+                    <h5><button type="button" class="btn btn-secondary">Agregar al carrito</button></h5>
+                </p>
+                </div>
+              </div>
             </div>
-            <div class="cuadroVentaC">
-                <FIELDSET>
-                    <div class="imagenes"><img src="../img/lentesretro.JPG"></div>
-                    <h3>Lentes retro $8000</h3>
-                    <span>Color</span>
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/lentesblue.JPG" class="card-img-top imagenRopa" alt="...">
+                <div class="card-body textocard">
+                  <h5 class="card-title">Lentes $2900</h5>
+                  <p class="card-text"><span>Color</span>
                     <select name="" id="">
                         <option value="">Negro</option>
                         <option value="">Blanco</option>
                     </select>
-                    <h5><input type="button"><label>Agregar al carrito</label></h5>
-                </FIELDSET>
-            </div>
-            <div class="cuadroVentaD">
-                <FIELDSET>
-                    <div class="imagenes"><img src="../img/arosplata.JPG"></div>
-                    <h3>Aros plata $4900</h3>
-                    <span>Talle</span>
-                    <select name="" id="">
-                        <option value="">S</option>
-                        <option value="">M</option>
-                        <option value="">L</option>
-                    </select>
-                    <h5><input type="button"><label>Agregar al carrito</label></h5>
-                </FIELDSET>
-            </div>
-            <div class="cuadroVentaE">
-                <FIELDSET>
-                    <div class="imagenes"><img src="../img/panuelosimple.JPG"></div>
-                    <h3>Pañuelo Simple $1900</h3>
-                    <span>Color</span>
-                    <select name="" id="">
-                        <option value="">Negro</option>
-                        <option value="">Blanco</option>
-                        <option value="">Beige</option>
-                        <option value="">Rosa</option>
-                    </select>
-                    <h5><input type="button"><label>Agregar al carrito</label></h5>
-                </FIELDSET>
-            </div>
-            <div class="cuadroVentaF">
-                <FIELDSET>
-                    <div class="imagenes"><img src="../img/gorraNY.JPG"></div>
-                    <h3>Gorra NY $1999</h3>
-                    <span>Color</span>
-                    <select name="" id="">
-                        <option value="">Negro</option>
-                        <option value="">Blanco</option>
-                        <option value="">Beige</option>
-                        <option value="">Rosa</option>
-                    </select>
-                    <h5><input type="button"><label>Agregar al carrito</label></h5>
-                </FIELDSET>
-            </div>
-            <div class="cuadroVentaG">
-                <FIELDSET>
-                    <div class="imagenes"><img src="../img/lentesblue.JPG"></div>
-                    <h3>Lentes Blue Light $8000</h3>
-                    <span>Color</span>
-                    <select name="" id="">
-                        <option value="">Negro</option>
-                        <option value="">Blanco</option>
-                        <option value="">Beige</option>
-                    </select>
-                    <h5><input type="button"><label>Agregar al carrito</label></h5>
-                </FIELDSET>
-            </div>
-            <div class="cuadroVentaH">
-                <FIELDSET>
-                    <div class="imagenes"><img src="../img/arosdorados.JPG"></div>
-                    <h3>Aros dorados $5900</h3>
-                    <span>Talle</span>
-                    <select name="" id="">
-                        <option value="">S</option>
-                        <option value="">M</option>
-                        <option value="">L</option>
-                    </select>
-                    <h5><input type="button"><label>Agregar al carrito</label></h5>
-                </FIELDSET>
+                    <h5><button type="button" class="btn btn-secondary">Agregar al carrito</button></h5>>
+                </p>
+                </div>
+              </div>
             </div>
         </div>
-
+        
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/lentesretro.JPG" class="card-img-top imagenRopa" alt="...">
+                <div class="card-body textocard">
+                  <h5 class="card-title">Lentes retro $2900</h5>
+                  <p class="card-text"><span>Color</span>
+                    <select name="" id="">
+                        <option value="">Negro</option>
+                        <option value="">Blanco</option>
+                    </select>
+                    <h5><button type="button" class="btn btn-secondary">Agregar al carrito</button></h5>
+                    </div>
+              </div>
+            </div>
+            
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/gorraNY.JPG" class="card-img-top imagenRopa" alt="...">
+                <div class="card-body textocard">
+                  <h5 class="card-title">Gorra NY $4000</h5>
+                  <p class="card-text"><span>Color</span>
+                    <select name="" id="">
+                        <option value="">Negro</option>
+                        <option value="">Blanco</option>
+                        <option value="">Beige</option>
+                        <option value="">Rosa</option>
+                    </select>
+                    <h5><button type="button" class="btn btn-secondary">Agregar al carrito</button></h5>
+                </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/arosplata.JPG" class="card-img-top imagenRopa" alt="...">
+                <div class="card-body textocard">
+                  <h5 class="card-title">Aros Plata $4100</h5>
+                  <p class="card-text"><span>Color</span>
+                    <span>Talle</span>
+                    <select name="" id="">
+                        <option value="">S</option>
+                        <option value="">M</option>
+                        <option value="">L</option>
+                    </select>
+                    <h5><button type="button" class="btn btn-secondary">Agregar al carrito</button></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/arosdorados.JPG" class="card-img-top imagenRopa" alt="...">
+                <div class="card-body textocard">
+                  <h5 class="card-title">Aros Dorados $3500</h5>
+                  <p class="card-text"><span>Color</span>
+                    <span>Talle</span>
+                    <select name="" id="">
+                        <option value="">S</option>
+                        <option value="">M</option>
+                        <option value="">L</option>
+                    </select>
+                    <h5><button type="button" class="btn btn-secondary">Agregar al carrito</button></h5>
+                </div>
+              </div>
+            </div>
     </main>
 
     <!-- inicio de footer -->
