correciones en nav

--- a/html/Accesorios.html
+++ b/html/Accesorios.html
@@ -44,7 +44,7 @@
                     <li><a href="../index.html"> Home </a> </li>
                     <li><a href="Ropa.html">Ropa </a> </li>
                     <li><a href="Accesorios.html" >Accesorios </a> </li>
-                    <li><a href="preguntas.html" > Preguntas frecuentes </a> </li>                        
+                    <li><a href="preguntas.html" id="preg"> Preguntas frecuentes </a> </li>                        
                     <li><a href="Contacto.html"> Contacto </a> </li>
                 </ul>
             </nav>
@@ -104,7 +104,7 @@
                         <option value="">Negro</option>
                         <option value="">Blanco</option>
                     </select>
-                    <h5><button type="button" class="btn btn-secondary">Agregar al carrito</button></h5>>
+                    <h5><button type="button" class="btn btn-secondary">Agregar al carrito</button></h5>
                 </p>
                 </div>
               </div>
