--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -42,7 +42,7 @@
                     <li><a href="../index.html"> Home </a> </li>
                     <li><a href="Ropa.html">Ropa </a> </li>
                     <li><a href="Accesorios.html" >Accesorios </a> </li>
-                    <li><a href="preguntas.html" > Preguntas frecuentes </a> </li>                        
+                    <li><a href="preguntas.html" id="preg"> Preguntas frecuentes </a> </li>                        
                     <li><a href="Contacto.html"> Contacto </a> </li>
                 </ul>
             </nav>
